--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 .bgimage {
     height:100vh;
-    background: url('C:/Users/hesel/Documents/ElevenFiftyProjects/RedBadge/SoftwarePortfolio/Assets/profile software.jpg');
+    background: url('assets/profile software.jpg');
     background-size:cover;
     position:relative;
 }
