--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 .bgimage {
     height:100vh;
-    background: url('Assets/profile software.jpg');
+    background: url('Assets/profile software.JPG');
     background-size:cover;
     position:relative;
 }
